+Improve Python autoindenter to better handle more conditions in regards to
brackets and parens.
+Autocomp and calltip shortcuts are now customizable.
+Add Bookmark manager window to Shelf
+Support storing/loading user configuration from XDG standard location on Linux.
+Persist find settings between sessions.
+Improvements to the Style Editor (ability to remove style sheets)

LIBRARY:
+Support ControlBars in on left and right side of ControlBox.
+Add ProcessThreadBase class to allow for customizing the creation of the Popen object.

BUG FIXES:
+Fix issue that could result in crash when rapidly clicking on notebook buttons.
+Fix minor display issue in update checker gauge.
+Fix behavior of left/right arrow key motions in vim emulation mode to better
emulate vi.
+Fix issue where an invalid encoding would be detected as the default encoding
on some systems.
+Fix issue where ToolBar would not resize properly when appearance settings
where changed to use different size icons.
+Fix screen refresh issue in tab control where it wouldn't get repainted properly
in some cases.
+Fix crash in reload with encoding when the encoding fails to decode the text.
+Fix pipe character not being accepted in keybindings editor.
+Fix angle brackets not being handled properly in keybindings editor.
+Fix issue with window not being brought to front in all cases when opening
file with "Edit with Editra..." shortcut on Windows.
+Fix issue with showing calltips for buffers that are not visible.
+Handle OverflowError that could occur when too large a value was passed to the
busy indicator.
+Fix display inconsistencies in recently opened file menu.
+Fix some issues with the binary installer and uninstaller on Windows Vista/7
+Fix behavior of change word command to better emulate vi.
+Fix error handling in purging of old log files.
+Fix keybinding editor not applying cleared keybindings until restart.
+Fix hard crash that could occur when processing auto-completion data for some